# filedgr-ripple-cli

./: .gitignore  README.md  my_memo.json  my_memo02.json  pyproject.toml  requirements.txt  setup.cfg  test.json
src/filedgr_ripple_cli/: __main__.py
src/filedgr_ripple_cli/dto/: network.py
src/filedgr_ripple_cli/ripple/: tx.py
src/filedgr_xrpl_cli/: __main__.py  settings.py
src/filedgr_xrpl_cli/cli_commands/: nfts.py  payment.py  wallets.py
src/filedgr_xrpl_cli/dto/: filedgr_nft_type.py  memo.py
src/filedgr_xrpl_cli/my_xrpl/: tx.py
src/filedgr_xrpl_cli/nft_utils/: id_gen.py
src/filedgr_xrpl_cli/ripple/: connection.py  tx.py  wallet.py
tests/dto/: test_memo.py
