[metadata]
name=filedgr_ripple_cli
version="0.0.1"
description="CLI tool to interact with the ripple DLT"
long_description=file: README.md
classifiers=
    Programming Language :: Python :: 3

[options]
zip_safe=True
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
install_requires =
    typer>=0.4.1

[options.packages.find]
where=src
exclude =
    tests*

[options.entry_points]
console_scripts=
    ripplecli = filedgr_ripple_cli.__main__:main

[flake8]
max-line-length = 120
ignore = E501
per-file-ignores =
    __init__.py:F401
max-complexity = 10